--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +6,20 @@
 }
 *::after, *::before {
   box-sizing: border-box;
+}
+
+:root {
+  --clr-primary: #0b0d17;
+  --clr-txt-paragraph: #d0d6f9;
+  --clr-txt-heading: #ffffff;
+  --fnt-bellefair: "Bellefair", serif;
+  --fnt-barlow: "Barlow Condensed", sans-serif;
+}
+
+p {
+  font-family: var(--fnt-barlow);
+  font-size: 1.125em;
+  line-height: 2em;
 }
 
 .home {
