--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -1,9 +1,9 @@
-// colors
-
 :root {
+	// color
 	--clr-primary: #0b0d17;
 	--clr-txt-paragraph: #d0d6f9;
 	--clr-txt-heading: #ffffff;
+	// fonts
 	--fnt-bellefair: 'Bellefair', serif;
 	--fnt-barlow: 'Barlow Condensed', sans-serif;
 }
