--- a/src/styles.css
+++ b/src/styles.css
@@ -16,10 +16,8 @@
   --fnt-barlow: "Barlow Condensed", sans-serif;
 }
 
-p {
-  font-family: var(--fnt-barlow);
-  font-size: 1.125em;
-  line-height: 2em;
+body {
+  background-color: var(--clr-primary);
 }
 
 .home {
@@ -36,4 +34,66 @@ p {
 
 .technology {
   background-color: yellow;
+}
+
+.navbar {
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main-nav {
+  height: 100vh;
+  padding-left: 2rem;
+  padding-top: 7rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 33%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  transform: translateX(101%);
+  transition: transform 0.5s ease-in-out;
+}
+.main-nav--isOpen {
+  transform: translateX(0);
+}
+.main-nav__close {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 1.4rem;
+}
+.main-nav > a {
+  font-family: var(--fnt-barlow);
+  font-size: 1em;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  position: relative;
+  margin-bottom: 2rem;
+  color: white;
+  text-decoration: none;
+}
+.main-nav > a::after {
+  content: "";
+  width: 3px;
+  height: 150%;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.main-nav > a.isActive::after {
+  opacity: 1;
+}
+.main-nav > a span {
+  font-weight: bold;
+  margin-right: 0.2rem;
 }
