--- a/src/pages/Home/_index.scss
+++ b/src/pages/Home/_index.scss
@@ -1,5 +1,109 @@
 @use '../../sass/abstracts' as *;
 
 .home {
-	background-color: blue;
+	@include page-spacing;
+	background: url('./assets/home/background-home-mobile.jpg') fixed no-repeat;
+	background-size: cover;
+	min-height: 100vh;
+	width: 100%;
+
+	// medium screen MQ
+	@include mq(medium) {
+		background-image: url('./assets/home/background-home-tablet.jpg');
+	}
+
+	// large screen
+	@include mq(large) {
+		background-image: url('./assets/home/background-home-desktop.jpg');
+	}
+
+	.container {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		@include mq(large) {
+			flex-direction: row;
+			justify-content: space-between;
+			text-align: left;
+			margin-top: 10rem;
+		}
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__title {
+		@include heading-1;
+		order: 2;
+		color: var(--clr-txt-heading);
+		margin-bottom: 2rem;
+	}
+
+	&__tagline {
+		@include heading-5;
+		order: 1;
+		color: var(--clr-txt-paragraph);
+		margin-bottom: 2rem;
+	}
+
+	&__blurb {
+		@include body-text;
+		order: 3;
+		color: var(--clr-txt-paragraph);
+		margin-bottom: 5rem;
+		@include mq(large) {
+			margin-bottom: 0;
+
+			max-width: 30rem;
+		}
+	}
+
+	&__CTA-wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+
+	&__CTA-button {
+		@include heading-3;
+		font-size: clamp(1.25em, 5vw, 2em);
+		order: 4;
+		width: 40vw;
+		min-width: 9.375rem;
+		max-width: 17.125rem;
+		aspect-ratio: 1;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: relative;
+		color: black;
+		text-decoration: none;
+		background-color: white;
+		border-radius: 100vw;
+		margin-inline: auto;
+		z-index: 1;
+
+		&::after {
+			content: '';
+			width: 160%;
+			aspect-ratio: 1;
+			border-radius: 500px;
+			background-color: rgba(255, 255, 255, 0.5);
+			position: absolute;
+			z-index: -1;
+			transform: scale(50%);
+			opacity: 0;
+			transition: transform 0.3s ease-in-out, opacity 0.2s linear;
+		}
+
+		&:hover,
+		&:active {
+			&::after {
+				transform: scale(100%);
+				opacity: 1;
+			}
+		}
+	}
 }
