--- a/src/sass/abstracts/_mixin.scss
+++ b/src/sass/abstracts/_mixin.scss
@@ -1,8 +1,9 @@
 @use '../../sass/abstracts/vars' as *;
+@use '../../sass/abstracts/media' as *;
 
 @mixin heading-1 {
 	font-family: var(--fnt-bellefair);
-	font-size: 9.375em;
+	font-size: clamp(5em, calc(20vw + 1em), 9.375em);
 	text-transform: uppercase;
 }
 
@@ -14,7 +15,8 @@
 
 @mixin heading-3 {
 	font-family: var(--fnt-bellefair);
-	font-size: 3.5em;
+
+	font-size: clamp(1.25em, 5vw, 3.5em);
 	text-transform: uppercase;
 }
 
@@ -26,7 +28,8 @@
 
 @mixin heading-5 {
 	font-family: var(--fnt-barlow);
-	font-size: 1.75em;
+
+	font-size: clamp(1em, 3vw, 1.25em);
 	letter-spacing: 0.25em;
 	text-transform: uppercase;
 }
@@ -53,6 +56,13 @@
 
 @mixin body-text {
 	font-family: var(--fnt-barlow);
-	font-size: 1.125em;
+	font-size: clamp(1em, 3vw, 1.2em);
 	line-height: 2em;
+}
+
+@mixin page-spacing {
+	padding-top: 8rem;
+	@include mq(medium) {
+		padding-top: 13rem;
+	}
 }
