--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,4 +1,5 @@
 @forward './Home/';
 @forward './Destination/';
+@forward './Destination/DestinationInfo/';
 @forward './Crew/';
 @forward './Technology/';
